<resources>
    <string name="app_name">Guardian News App</string>
    <string name="guardian_logo">Guardian logo</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="no_news">No news items found.</string>
    <string name="no_internet">Check your internet connection.</string>
    <string name="fetching_posts">Fetching posts and images…</string>
    <string name="settings">Settings</string>
    <string name="number_of_posts">Number of posts to fetch</string>
    <string name="posts_to_fetch_key" translatable="false">posts_to_fetch</string>
    <string name="posts_to_fetch_default">100</string>
    <string name="section_key">section</string>
    <string name="section_title">Section to display</string>
    <string name="section_default">technology/android</string>
    <string name="show_all_key">show_all</string>
    <string name="show_all">Show all posts</string>
    <string name="show_all_on">Showing posts from all categories</string>
    <string name="show_all_off">Showing only posts from section below</string>
</resources>
