<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/posts_to_fetch_default"
        android:imeOptions="actionSend"
        android:inputType="number"
        android:key="@string/posts_to_fetch_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/number_of_posts" />

    <SwitchPreference
        android:key="@string/show_all_key"
        android:summaryOn="@string/show_all_on"
        android:summaryOff="@string/show_all_off"
        android:title="@string/show_all" />

    <EditTextPreference
        android:defaultValue="@bool/show_all_default"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:key="@string/section_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/section_title" />
</PreferenceScreen>